Fixed the overflow of technology stack

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -56,6 +56,7 @@
         justify-content: center;
         align-items: center;
     }
+    .technologies-key {width: 17rem;}
     .descriptions, .list-item {
         font-size: 0.9rem;
         line-height: 1.5rem;
